# Legal-Ontology-based-GraphRAG

./: .env.example  .gitignore  EXECUTION_PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run-frontend.sh  run.sh
app/: config.py  main.py
app/api/: dashboard.py  documents.py  health.py  parse_queue.py  sources.py
app/db/: corpus.py  parsed.py
app/fetchers/: __init__.py  base.py  congress.py  courtlistener.py  ecfr.py  federal_register.py  ny_senate.py  nycrr.py  registry.py  uscode.py
app/models/: corpus.py  parsed.py
app/parse/: __init__.py  interface.py  noop.py  registry.py  worker.py
app/scheduler/: jobs.py
app/storage/: __init__.py  local_fs.py
backend/app/: database.py  embeddings.py  extractor.py  graph_builder.py  graph_schema.py  graph_sync.py  llm_parser.py  main.py  models.py  neo4j_client.py  query_engine.py  retrievers.py  schemas.py  validator.py
docs/: competency-questions.md  decisions.md  engineering-plan.md  nycrr-licensing.md  ontology-schema.md  triple-store.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
graphrag-plan/: architecture.md  implementation.md
ontology/: combined.ttl  domain.ttl  legalruleml.ttl  ufo-l.ttl  uslm.ttl
scripts/: import_cuad.py  insert_fake_document.py  migrate_to_neo4j.py  seed.py  seed_sources.py
tests/: conftest.py  test_api_health.py  test_fetchers_network.py  test_noop_seam.py  test_ontology.py
