[project]
name = "legal-corpus-pipeline"
version = "0.1.0"
description = "Ingestion + parse-seam scaffolding for US Federal + NY legal corpus. Parser NOT implemented."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "tenacity>=8.3",
  "apscheduler>=3.10",
  "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.5",
  "black>=24",
  "mypy>=1.10",
  "coverage>=7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/api/dashboard.py" = ["E501"]  # Long lines in embedded JS template strings.

[tool.mypy]
python_version = "3.11"
strict = true
files = ["app"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
